--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-infinite-scroll-component": "^5.0.4",
+    "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.1"
   },
   "scripts": {
